[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy5.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/EnemyType2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 93.4562, 92.7832 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 95.5812, 11.6587 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1403.22, 26.0099 )

[node name="EnemyType2" type="KinematicBody2D"]
position = Vector2( 16, -116 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 300, 1000 )

[node name="enemy2" type="Sprite" parent="."]
position = Vector2( 34.2996, -37.4178 )
scale = Vector2( 1.53178, 1.56694 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 34.7451, -43.3087 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 34.1299, -32.1285 )
scale = Vector2( 9.50416, 3.19203 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.227451, 0.117647, 0.560784, 1 )
position = Vector2( 34.602, -125.779 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.388235, 0.156863, 0.156863, 1 )
position = Vector2( -10.6169, -23.054 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
